--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
     branches: [ main, dev ]
   pull_request:
     branches: [ main, dev ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,15 +22,12 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Lint code
-        run: |
-          npx eslint . || true
-
-      - name: Run tests
-        run: |
-          echo "✅ Backend tests placeholder"
+        run: npx eslint . || true
 
       - name: Run Jest tests
         run: npm test
+        env:
+          NODE_ENV: test
