--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
