--- a/gateway/package.json
+++ b/gateway/package.json
@@ -17,6 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^7.1.0",
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1"
