Fixing Infrastructure Issues

--- a/k8s-manifests/auth-service.yml
+++ b/k8s-manifests/auth-service.yml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: auth-service
         image: readers-haven-auth-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 5001
         envFrom:
