--- a/k8s-manifests/books-service.yml
+++ b/k8s-manifests/books-service.yml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: books-service
         image: readers-haven-books-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 5002
         env:
