--- a/k8s-manifests/gateway.yml
+++ b/k8s-manifests/gateway.yml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: gateway
         image: readers-haven-gateway:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
         env:
