Still fixing Infrastructure Issues

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM node:18
 WORKDIR /app
 
 # Copy gateway and shared libs so we can import from ../shared
@@ -9,5 +9,5 @@ COPY gateway ./gateway
 WORKDIR /app/gateway
 RUN npm install --production
 
-EXPOSE 8080
-CMD ["node", "server.js"]
+EXPOSE 3000
+CMD node server.js
