--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,13 +1,12 @@
 FROM node:18
 WORKDIR /app
 
-# Copy gateway and shared libs so we can import from ../shared
-COPY gateway/package*.json ./gateway/
-COPY shared ./shared
-COPY gateway ./gateway
-
-WORKDIR /app/gateway
+# Copy package files and install dependencies
+COPY package*.json ./
 RUN npm install --production
+
+# Copy application files
+COPY . .
 
 EXPOSE 3000
 CMD node server.js
