--- a/services/inventory-service/package.json
+++ b/services/inventory-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "NODE_ENV=test node --test"
+    "test": "node --test"
   },
   "dependencies": {
     "cors": "^2.8.5",
