--- a/services/inventory-service/Dockerfile
+++ b/services/inventory-service/Dockerfile
@@ -1,7 +1,16 @@
 FROM node:18-alpine
+
 WORKDIR /app
-COPY package*.json ./
-COPY . .
-RUN npm install --production
+ENV NODE_ENV=production
+
+COPY shared ./shared
+RUN npm install --prefix shared --omit=dev
+
+COPY services/inventory-service/package*.json ./services/inventory-service/
+RUN npm install --prefix services/inventory-service --omit=dev
+
+COPY services/inventory-service ./services/inventory-service
+
+WORKDIR /app/services/inventory-service
 EXPOSE 5005
 CMD ["node", "server.js"]
