--- a/services/order-service/Dockerfile
+++ b/services/order-service/Dockerfile
@@ -1,7 +1,16 @@
 FROM node:18-alpine
+
 WORKDIR /app
-COPY package*.json ./
-COPY . .
-RUN npm install --production
+ENV NODE_ENV=production
+
+COPY shared ./shared
+RUN npm install --prefix shared --omit=dev
+
+COPY services/order-service/package*.json ./services/order-service/
+RUN npm install --prefix services/order-service --omit=dev
+
+COPY services/order-service ./services/order-service
+
+WORKDIR /app/services/order-service
 EXPOSE 5004
 CMD ["node", "server.js"]
