--- a/services/quotes-service/Dockerfile
+++ b/services/quotes-service/Dockerfile
@@ -1,7 +1,16 @@
 FROM node:18-alpine
+
 WORKDIR /app
-COPY package*.json ./
-COPY . .
-RUN npm install --production
+ENV NODE_ENV=production
+
+COPY shared ./shared
+RUN npm install --prefix shared --omit=dev
+
+COPY services/quotes-service/package*.json ./services/quotes-service/
+RUN npm install --prefix services/quotes-service --omit=dev
+
+COPY services/quotes-service ./services/quotes-service
+
+WORKDIR /app/services/quotes-service
 EXPOSE 5003
 CMD ["node", "server.js"]
