--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,19 @@
 {
   "name": "shared-libs",
-  "version": "1.0.0",
-  "type": "module"
+  "version": "1.0.1",
+  "type": "module",
+  "exports": {
+    "./libs/*": "./libs/*.js"
+  },
+  "dependencies": {
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2",
+    "prom-client": "^15.1.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.55.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.55.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/semantic-conventions": "^1.23.0"
+  }
 }
