--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
 
   auth-service:
     build:
-      context: ./services/auth-service
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/auth-service/Dockerfile
     container_name: auth-service
     ports:
       - "5001:5001"
@@ -51,7 +51,9 @@ services:
       - quotes-service
 
   order-service:
-    build: ./services/order-service
+    build:
+      context: .
+      dockerfile: services/order-service/Dockerfile
     container_name: order-service
     environment:
       - PORT=5004
@@ -59,7 +61,9 @@ services:
       - "5004:5004"
 
   inventory-service:
-    build: ./services/inventory-service
+    build:
+      context: .
+      dockerfile: services/inventory-service/Dockerfile
     container_name: inventory-service
     environment:
       - PORT=5005
@@ -67,7 +71,9 @@ services:
       - "5005:5005"
 
   books-service:
-    build: ./services/books-service
+    build:
+      context: .
+      dockerfile: services/books-service/Dockerfile
     container_name: books-service
     environment:
       - PORT=5002
@@ -79,7 +85,9 @@ services:
         condition: service_healthy
 
   quotes-service:
-    build: ./services/quotes-service
+    build:
+      context: .
+      dockerfile: services/quotes-service/Dockerfile
     container_name: quotes-service
     environment:
       - PORT=5003
