--- a/k8s-manifests/mongo.yml
+++ b/k8s-manifests/mongo.yml
@@ -1,16 +1,3 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongo-pvc
-  namespace: readers-haven
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: hostpath
-  resources:
-    requests:
-      storage: 5Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -46,8 +33,9 @@ spec:
             cpu: "500m"
       volumes:
       - name: mongo-storage
-        persistentVolumeClaim:
-          claimName: mongo-pvc
+        hostPath:
+          path: /run/desktop-host/data/mongo
+          type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: Service
