--- a/k8s-manifests/inventory-service.yml
+++ b/k8s-manifests/inventory-service.yml
@@ -53,6 +53,10 @@ kind: Service
 metadata:
   name: inventory-service
   namespace: readers-haven
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "5005"
+    prometheus.io/path: "/metrics"
 spec:
   selector:
     app: inventory-service
