--- a/k8s-manifests/order-service.yml
+++ b/k8s-manifests/order-service.yml
@@ -53,6 +53,10 @@ kind: Service
 metadata:
   name: order-service
   namespace: readers-haven
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "5004"
+    prometheus.io/path: "/metrics"
 spec:
   selector:
     app: order-service
