--- a/k8s-manifests/books-service.yml
+++ b/k8s-manifests/books-service.yml
@@ -53,6 +53,10 @@ kind: Service
 metadata:
   name: books-service
   namespace: readers-haven
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "5002"
+    prometheus.io/path: "/metrics"
 spec:
   selector:
     app: books-service
