--- a/k8s-manifests/gateway.yml
+++ b/k8s-manifests/gateway.yml
@@ -56,6 +56,10 @@ kind: Service
 metadata:
   name: gateway
   namespace: readers-haven
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
+    prometheus.io/path: "/metrics"
 spec:
   selector:
     app: gateway
